--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>examples</artifactId>
+    <groupId>org.playwrightfun</groupId>
+    <artifactId>playwrightfun</artifactId>
     <version>0.1-SNAPSHOT</version>
     <name>Playwright Client Examples</name>
     <properties>
